----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-02-26 Garvin Hicking <me@supergarv.de>
    * lang/german-*: better grammar. ;)
    * libraries/display_tbl.lib.php3: Fixed transformation-link variable
      usage for special queries like 'SHOW FIELDS', where certain variables are
      not set.
    
2003-02-25 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php3: undefined variable $comment
    * tbl_move_copy.php3: 'column_info'

2003-02-25 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/bulgarian-*.inc.php3, lang/czech-*.inc.php3, lang/dutch-*.inc.php3,
      lang/swedish-*.inc.php3, lang/thai-*.inc.php3: Removed problematic %e from
      $datefmt (translations #692065).
    * lang/japanese-*.inc.php3: Fixed some inconsistences.
    * config.inc.php3, db_details_importdocsql.php3, Documentation.html,
      sql.php3, tbl_move_copy.php3, tbl_rename.php3,
      libraries/config_import.lib.php3, libraries/relation.lib.php3,
      libraries/transformations.lib.php3: Changed 'column_comments' to
      'column_info'.
    * ChangeLog: Removed the 2.3.x branch from this ChangeLog; I moved it to
      <http://www.phpmyadmin.net/ChangeLogs/>.

2003-02-25 Garvin Hicking <me@supergarv.de>
    * tbl_properties.inc.php3: Fixed duped display of comments due to
      merging diff conflict.
    * lang/german*: German translations, only missing transformation
      descriptions. They shouldn't be translated at that early point, I guess.
    * libraries/config_import.lib.php3, libraries/relation.lib.php3,
      libraries/transformations.lib.php3: 'column_info', they were somehow
      not included in rabus' commit?!

2003-02-24 Alexander M. Turek  <rabus@users.sourceforge.net>
    * common.lib.php3: Backwards compatibility.

2003-02-24 Garvin Hicking <me@supergarv.de>
    Submitted multiple patches from the patch tracker:

    * JS rowmarker now works in vertical display mode