@@ -207,27 +207,12 @@ if (isset($submit)) {
     }
     
     // garvin: Update comment table for mime types [MIME]
-    if (is_array($field_mimetype) && $cfgRelation['commwork'] && $cfg['BrowseMIME']) {
+    if (is_array($field_mimetype) && $cfgRelation['commwork'] && $cfgRelation['mimework'] && $cfg['BrowseMIME']) {
         @reset($field_mimetype);
         while(list($fieldindex, $mimetype) = each($field_mimetype)) {
             PMA_setMIME($db, $table, $field_name[$fieldindex], $mimetype, $field_transformation[$fieldindex], $field_transformation_options[$fieldindex]);
         }
     }
-
-    // garvin: If comments were sent, enable relation stuff
-    require('./libraries/relation.lib.php3');
-    require('./libraries/transformations.lib.php3');
-
-    $cfgRelation = PMA_getRelationsParam();
-
-    // garvin: Update comment table for mime types [MIME]
-    if (is_array($field_mimetype) && $cfgRelation['commwork'] && $cfg['BrowseMIME']) {
-        @reset($field_mimetype);
-        while(list($fieldindex, $mimetype) = each($field_mimetype)) {
-            PMA_setMIME($db, $table, $field_name[$fieldindex], $mimetype, $field_transformation[$fieldindex], $field_transformation_options[$fieldindex]);
-        }
-    }
-    
 
     // Go back to the structure sub-page
     $sql_query = $sql_query_cpy;
